# ytptube

./: .dockerignore  .editorconfig  .gitignore  API.md  CHANGELOG-dev.json  CHANGELOG-master.json  CHANGELOG.json  CONTRIBUTING.md  Dockerfile  FAQ.md  LICENSE  Pipfile  README.md  app.spec  entrypoint.sh  healthcheck.sh  pyproject.toml  yt-dlp
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build-pr.yml  delete-builds.yml  main.yml  native-build.yml  update-yt-dlp.yml
app/: AsyncPool.py  Config.py  DataStore.py  Download.py  DownloadQueue.py  ItemDTO.py  Models.py  Notifier.py  Utils.py  Webhooks.py  __init__.py  conftest.py  local.py  main.py  native.py  upgrader.py  version.py
app/features/conditions/: __init__.py  deps.py  migration.py  models.py  repository.py  router.py  schemas.py  service.py
app/features/core/: deps.py  migration.py  models.py  schemas.py  utils.py
app/features/dl_fields/: __init__.py  deps.py  migration.py  models.py  repository.py  router.py  schemas.py  service.py
app/features/notifications/: deps.py  migration.py  models.py  repository.py  router.py  schemas.py  service.py
app/features/presets/: __init__.py  defaults.py  deps.py  migration.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py
app/features/streaming/: router.py  types.py
app/features/tasks/: __init__.py  deps.py  migration.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py
app/features/ytdlp/: archiver.py  extractor.py  mini_filter.py  outtmpl.py  patches.py  router.py  utils.py  ytdlp.py  ytdlp_opts.py
app/migrations/: 20231115152938_initial.py  20251116173731_add_status_index.py  20260117184822_add_conditions_table.py  20260119162444_add_dl_fields_table.py  20260121134838_add_notifications_table.py  20260122201858_add_task_definitions.py  20260124171740_add_tasks_table.py  20260125125900_add_presets_table.py
app/player/: M3u8.py  Playlist.py  Segments.py  Subtitle.py  ffprobe.py
app/postprocessors/: __init__.py  make_nfo.py  nfo_maker.py  patch_metadata_parser.py
app/routes/: dev.py  history.py  images.py  logs.py  presets.py  tasks.py
app/routes/api/: _static.py  archive.py  archiver.py  browser.py  conditions.py  dev.py  dl_fields.py  docs.py  download.py  history.py  images.py  logs.py  notifications.py  ping.py  player.py  presets.py  system.py  task_definitions.py  tasks.py  yt_dlp.py
app/routes/socket/: connection.py  history.py  terminal.py
app/schema/: conditions.json  dl_fields.json  notifications.json  presets.json  task_definition.json  tasks.json
app/scripts/: create_migration.py  seed_db.py
app/src/: Config.py  DataStore.py  Download.py  DownloadQueue.py  M3u8.py  Notifier.py  Segments.py  Utils.py  ffprobe.py
app/src/DTO/: ItemDTO.py
app/tests/: helpers.py  mini_filter_test.py  test_ag_utils.py  test_async_url_validation_routes.py  test_backgroundworker.py  test_cache.py  test_cf_solver_handler.py  test_condition_ignore.py  test_conditions.py  test_datastore.py  test_datastore_pagination.py  test_dl_fields.py  test_download.py  test_download_utils.py  test_encoder.py  test_events.py  test_extractor_timeout.py  test_ffprobe.py  test_generic_browser.py  test_generic_task_handler.py  test_history_routes.py  test_httpx_client.py  test_images_routes.py  test_item_adder_extract_concurrency.py  test_item_batcher.py  test_itemdto.py  test_logwrapper.py  test_m3u8.py  test_nfo_maker.py  test_notifications.py  test_operations.py  test_package_installer.py  test_playlist.py  test_presets.py  test_router.py  test_rss_handler.py  test_scheduler.py  test_segments.py  test_services.py  test_singleton.py  (+15 more)
app/yt_dlp_plugins/extractor/: generic_browser.py
app/yt_dlp_plugins/postprocessor/: nfo_maker.py
frontend/: package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  formats.js  main.js
frontend/src/components/: CLI-Console.vue  CLI-Terminal.vue  Form-Add.vue  Page-Completed.vue  Page-Downloading.vue  Page-Footer.vue  Page-Header.vue  Page-Tasks.vue  Video-Player.vue
ui/: .env.example  .gitignore  .prettierrc  bunfig.toml  error.vue  eslint.config.js  nuxt.config.ts  package.json  pnpm-lock.yaml  test_fix.mjs  tsconfig.json  vitest.config.ts  web-types.json
ui/@types/: config.d.ts  item.d.ts  tasks.ts
ui/app/: app.config.ts  error.vue  spa-loading-template.html
ui/app/components/: AppRoot.vue  ConditionForm.vue  ConfirmDialog.vue  Connection.vue  ConnectionBanner.vue  DLFieldForm.vue  DLFields.vue  DLInput.vue  DeprecatedNotice.vue  Dialog.vue  Dropdown.vue  EmbedPlayer.vue  FloatingImage.vue  FolderInput.vue  GetInfo.vue  History.vue  ImageView.vue  InputAutocomplete.vue  LateLoader.vue  LimitsPage.vue  LogDetailModal.vue  Markdown.vue  Message.vue  Modal.vue  ModalText.vue  NewDownload.vue  NewVersion.vue  NotificationForm.vue  NotifyDropdown.vue  PageHeader.vue  Pager.vue  Popover.vue  PresetForm.vue  Queue.vue  Settings.vue  SettingsPanel.vue  Simple.vue  StatCard.vue  TaskDefinitionEditor.vue  (+8 more)
ui/components/: ConditionForm.vue  ConfirmDialog.vue  Dropdown.vue  EmbedPlayer.vue  FloatingImage.vue  GetInfo.vue  History.vue  ImageView.vue  LateLoader.vue  Message.vue  Modal.vue  NewDownload.vue  NotificationForm.vue  NotifyDropdown.vue  PresetForm.vue  Queue.vue  Settings.vue  TaskForm.vue  VideoPlayer.vue
ui/composables/: useConfirm.ts  useNotification.ts  useToast.js
ui/layouts/: default.vue
ui/pages/: add.vue  changelog.vue  changeslog.vue  conditions.vue  console.vue  index.vue  logs.vue  notifications.vue  presets.vue  tasks.vue
ui/plugins/: autoscroll.js  rtime.js  toast.js
ui/public/: manifest.webmanifest
ui/store/: ConfigStore.js  StateStore.js
ui/stores/: ConfigStore.js  ConfigStore.ts  NotificationStore.ts  SocketStore.js  SocketStore.ts  StateStore.js  StateStore.ts
ui/tests/: setup.ts  tsconfig.json
ui/types/: globals.d.ts  store.d.ts
ui/utils/: cache.js  embedable.js  embedable.ts  importer.ts  index.js  index.ts  utils.ts  ytdlp.ts
(+169 files in other folders)
